re PR middle-end/18897 (/usr/ccs/bin/ld: Unsatisfied symbols: putchar (first referenced in build/gengenrtl.o) (data))

PR 18897
	* toplev.c (compile_file): Call process_pending_assemble_externals
	just before targetm.asm_out.file_end.

From-SVN: r92347